Revert "overflow correction"
This reverts commit 6543140f9d6e538171b331c2e876b7e47d71469a.

--- a/index.css
+++ b/index.css
@@ -87,7 +87,7 @@ input
     z-index: -1;
     cursor: default;
     outline: 0.5vh solid var(--text-color-dark);
-    overflow-x: hidden;
+    overflow: hidden;
     overflow-y: scroll;
     -webkit-overflow-scrolling: touch; /* Non-standard, but I'm slightly desperate. */
 }
